@@ -498,6 +498,9 @@ General: added Bangladeshi Taka as currency option
 General: added minor link back to school home page when not logged in
 	Edited file /functions.php
 
+Students: fixed bug preventing module hooks from showing when there are multiple hooks present in the system
+	Edited file /modules/Students/student_view_details.php
+
 v10.0.00
 --------
 i18n: added Urdu as inactive development language
